--- a/root/site/header.html
+++ b/root/site/header.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="/comp/topic/topic_lib.js"></script>
     <script type="text/javascript" src="/site/panelresizer.js"></script>
     <script type="text/javascript" src="/static/livegrid/livegrid-all.js"></script>
+    <!-- script type="text/javascript" src="/static/pdfjs/pdf.min.js"></script -->
 
     <!-- DatePickerPlus - Ext -->
     <script type="text/javascript" src="/static/datepickerplus/ext.ux.datepickerplus.js"></script> 
