--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -51,7 +51,7 @@ padding: 2px 4px 2px 7px;
     background: #222;
     border: 2px solid #c2e1f5;
 }
-.arrow_box:after, .arrow_box:before {
+.xarrow_box:after, .xarrow_box:before {
     left: 100%;
     border: solid transparent;
     content: " ";
