Dashboards per role

--- a/root/comp/dashboard.html
+++ b/root/comp/dashboard.html
@@ -4,7 +4,7 @@
     my $dashboardlets = $c->stash->{dashboardlets};
 </%perl>
 
-<div id="boot">
+<div id="boot" align="center">
     
 % if($dashboards){
 % if(scalar @{$dashboards} > 0){
