--- a/root/fields/field_files.html
+++ b/root/fields/field_files.html
@@ -6,11 +6,11 @@
 % if( _array( $data->{files} ) ) {
     <ul class="nav nav-list">
         <li class="nav-header">
-            <% _loc("Files") %>
+            <% _loc( $meta->{is_clone} ? $meta->{id_field} : 'Files' ) %>
         </li>
     </ul>
     <ul class="" style="margin-left: 20px">
-% foreach my $file ( _array( $data->{files} ) ) {
+% foreach my $file ( _array( $data->{ $meta->{id_field} } ) ) {
 %   my $fii = $data->{ii} . '_' . $file->{md5};
 %   my $target = $file->{extension} =~ /pdf|htm|html|txt|properties/i ? '_blank' : 'FrameDownload';  # download or try to show on next tab?
 %   my ($size,$units) = Baseliner::Utils::_size_unit( $file->{filesize} );
