--- a/root/comp/dashboard.html
+++ b/root/comp/dashboard.html
@@ -4,7 +4,7 @@
     my $dashboardlets = $c->stash->{dashboardlets};
 </%perl>
 
-<div id="boot">
+<div id="boot" align="center">
     
 % if($dashboards){
 % if(scalar @{$dashboards} > 0){
@@ -28,6 +28,7 @@
         <div class="grid_10" style="margin-bottom: 5px;">
 % if($dashboardlets){        
 % for my $dash ( sort { $a->{order} <=> $b->{order} } _array $dashboardlets ) {
+% _error $dash;
 % if ($dash->{order} % 2 != 0){
     <& $dash->{html} &>
 % }}
