--- a/root/comp/dashboard_job.html
+++ b/root/comp/dashboard_job.html
@@ -14,7 +14,7 @@
 <div id="boot">
     <div class="container_24" style="padding-top:12px;padding-left:10px;">
         <div class="grid_24">
-            <h2>Job: <%$namejob%> (<a href="javascript:Baseliner.addNewTabComp('/job/log/list?id_job=<%$idjob%>', _('Log details <%$namejob%>'), { tab_icon: '/static/images/icons/moredata.gif' } );"> log completo </a>)</h2>
+            <h2>Job: <%$namejob%> (<a href="javascript:Baseliner.add_tabcomp('/job/log/list?id_job=<%$idjob%>', _('<%$namejob%>'), { tab_icon: '/static/images/icons/moredata.gif' } );"> log completo </a>)</h2>
         </div>
 
         <div class="grid_11">
