--- a/root/site/header.html
+++ b/root/site/header.html
@@ -30,6 +30,14 @@
     <script src="/static/flot/jquery.flot.resize.js"></script>
     <script src="/static/flot/flot.js"></script>
 
+    <!-- Gritt -->
+    <script src="/static/gritter/js/jquery.gritter.min.js"></script>
+    <link rel="stylesheet" href="/static/gritter/css/jquery.gritter.css">
+
+
+    <!-- The JIT -->
+    <script src="/static/jit/jit.js"></script>
+
     <!-- JSGantt -->
     <!--
     <link rel="stylesheet" type="text/css" href="/static/jsgantt.css" />
