--- a/root/site/header.html
+++ b/root/site/header.html
@@ -36,7 +36,7 @@
 
 
     <!-- The JIT -->
-    <script src="/static/jit/jit.js"></script>
+    <!-- <script src="/static/jit/jit.js"></script> -->
 
     <!-- JSGantt -->
     <!--
