avatar and top-header rearrange

--- a/root/site/top.html
+++ b/root/site/top.html
@@ -66,3 +66,11 @@
     <script type="text/javascript" src="/i18n/js"></script>
     <script type="text/javascript" src="/site/globals.js"></script>
     <script type="text/javascript" src="/site/common.js"></script>
+
+    <!-- Twitter Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="/site/960-Grid-System/code/css/960_24_col.css" />
+    <script type="text/javascript" src="/static/bootstrap/js/bootstrap.js"></script>
+    <link rel="stylesheet" type="text/css" href="/site/boot.css" /> 
+    <!-- #reset namespace
+        <link rel="stylesheet" type="text/css" href="/site/reset.css" /> 
+    -->
