--- a/root/fields/system/html/field_release.html
+++ b/root/fields/system/html/field_release.html
@@ -4,10 +4,10 @@
 </%args>
 
     <tr>
-      <th><% _loc('Release') %>:</th>
+      <th><% _loc($meta->{id_field}) %>:</th>
       <td>
-% if( $data->{release}->{title} ) {
-        <span class="arrow_box" style="padding: 3px; background-color:<% $data->{release}->{color} %>"><% $data->{release}->{title} || '&nbsp;' %></span>
+% if( $data->{$meta->{id_field}}->{title} ) {
+        <span class="arrow_box" style="padding: 3px; background-color:<% $data->{$meta->{id_field}}->{color} %>"><% $data->{$meta->{id_field}}->{title} || '&nbsp;' %></span>
 % }
       </td>
     </tr>
