--- a/root/fields/system/html/field_users.html
+++ b/root/fields/system/html/field_users.html
@@ -3,14 +3,14 @@
     $data
 </%args>
 
-% if( _array( $data->{users} ) ) {
+% if( _array( $data->{$meta->{id_field}} ) ) {
     <ul class="nav nav-list">
         <li class="nav-header">
-            <% _loc("Assign to") %>
+            <% _loc($meta->{id_field}) %>
         </li>
     </ul>
     <ul class="" style="margin-left: 20px">
-% foreach my $user ( _array( $data->{users} ) ) {
+% foreach my $user ( _array( $data->{$meta->{id_field}} ) ) {
         <li style="margin: 6px 0px 6px 0px">
             <img style="margin: 5px" width=16 src="/user/avatar/<% $user->{username} %>/image.png" />
             <% $user->{username} %> - <% $user->{realname} %>
