--- a/root/fields/system/html/field_revisions.html
+++ b/root/fields/system/html/field_revisions.html
@@ -3,14 +3,14 @@
     $data
 </%args>
 
-% if( _array( $data->{revisions} ) ) {
+% if( _array( $data->{$meta->{id_field}} ) ) {
     <ul class="nav nav-list">
         <li class="nav-header">
-            <% _loc("Revisions") %>
+            <% _loc($meta->{name_field}) %>
         </li>
     </ul>
     <ul class="" style="margin-left: 20px">
-% foreach my $revision ( _array( $data->{revisions} ) ) {
+% foreach my $revision ( _array( $data->{$meta->{id_field}} ) ) {
         <li style="margin: 6px 0px 6px 0px">
             <img style="margin: 5px" width=16 src="/static/images/icons/tag.gif" />
             <a href="javascript:Baseliner.show_revision(<% $revision->{mid} %>)"><% $revision->{name} %></a>
