--- a/root/fields/system/html/field_users.html
+++ b/root/fields/system/html/field_users.html
@@ -6,7 +6,7 @@
 % if( _array( $data->{$meta->{id_field}} ) ) {
     <ul class="nav nav-list">
         <li class="nav-header">
-            <% _loc($meta->{id_field}) %>
+            <% _loc($meta->{name_field}) %>
         </li>
     </ul>
     <ul class="" style="margin-left: 20px">
