--- a/root/email/action.html
+++ b/root/email/action.html
@@ -6,6 +6,7 @@
     $subject
     $to
     $username
+    $url
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
@@ -17,6 +18,12 @@
 body {
     font-family: arial;
     font-size: 10pt;
+}
+.imgRight {
+    vertical-align: middle;
+    text-align: right;
+    padding: 0px;
+    margin: 0px;
 }
 .backGroundPrimeraFila {
     font-family: Verdana;
@@ -44,12 +51,16 @@ body {
 </style>
 <body>
     <div id="tablaContenedor_div">
-        <TABLE cellpadding="0" cellspacing="0" width="100%">
+        <TABLE border=0 cellpadding="0" cellspacing="0" width="100%">
+            <TR style="height:54px">
+                <TD class="imgRight" ><img src="<% $url %>/static/images/filigrana.png" /></TD>
+            </TR>
             <TR height="20">
-                <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM</TD>
+                <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
             </TR>
         </TABLE>
     </div>
+
     <table border=0 cellspacing=2>
         <tr>
             <td><br><h3><% $subject %></h3><br></td>
