--- a/root/email/approval_job.html
+++ b/root/email/approval_job.html
@@ -9,6 +9,7 @@
 	$url_approve
 	$url_reject
 	$url_log
+	$url
 </%args>
 <%init>
     use Baseliner::Utils;
@@ -23,6 +24,12 @@
 body {
     font-family: arial;
     font-size: 10pt;
+}
+.imgRight {
+    vertical-align: middle;
+    text-align: right;
+    padding: 0px;
+    margin: 0px;
 }
 .backGroundPrimeraFila {
     font-family: Verdana;
@@ -51,7 +58,10 @@ body {
 
 <body>
 <div id="tablaContenedor_div">
-    <TABLE cellpadding="0" cellspacing="0" width="100%">
+    <TABLE border=0 cellpadding="0" cellspacing="0" width="100%">
+        <TR style="height:54px">
+            <TD class="imgRight" ><img src="<% $url %>/static/images/filigrana.png" /></TD>
+        </TR>
         <TR height="20">
             <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
         </TR>
