--- a/root/email/generic.html
+++ b/root/email/generic.html
@@ -16,6 +16,12 @@ body {
     font-family: arial;
     font-size: 10pt;
 }
+.imgRight {
+    vertical-align: middle;
+    text-align: right;
+    padding: 0px;
+    margin: 0px;
+}
 .backGroundPrimeraFila {
     font-family: Verdana;
     font-size: 8pt;
@@ -43,7 +49,10 @@ body {
 
 <body>
 <div id="tablaContenedor_div">
-    <TABLE cellpadding="0" cellspacing="0" width="100%">
+    <TABLE border=0 cellpadding="0" cellspacing="0" width="100%">
+        <TR style="height:54px">
+            <TD class="imgRight" ><img src="<% $url %>/static/images/filigrana.png" /></TD>
+        </TR>
         <TR height="20">
             <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
         </TR>
