--- a/root/email/job.html
+++ b/root/email/job.html
@@ -1,13 +1,17 @@
 <%args>
 	$action
+	$bl
 	$job
-	$message
+    $packageList
 	$realname
 	$status
 	$subject 
 	$to 
+	$type 
 	$username
+    $url
     $url_log
+    $windowType
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
@@ -20,6 +24,12 @@
 body {
     font-family: arial;
     font-size: 10pt;
+}
+.imgRight {
+    vertical-align: middle;
+    text-align: right;
+    padding: 0px;
+    margin: 0px;
 }
 .backGroundPrimeraFila {
     font-family: Verdana;
@@ -48,7 +58,10 @@ body {
 
 <body>
 <div id="tablaContenedor_div">
-    <TABLE cellpadding="0" cellspacing="0" width="100%">
+    <TABLE border=0 cellpadding="0" cellspacing="0" width="100%">
+        <TR style="height:54px">
+            <TD class="imgRight" ><img src="<% $url %>/static/images/filigrana.png" /></TD>
+        </TR>
         <TR height="20">
             <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
         </TR>
@@ -66,7 +79,13 @@ body {
     <tr>
         <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Usuario propietario del pase:</b></td><td style='width: 64%;'><% $username %> (<% $realname %>)</td>
     </tr><tr>
-        <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Ultimo Mensaje de pase: </b></td><td style='width: 64%;'><% $message || '<i>no disponible</i>' %></td>
+        <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Tipo de ventana:</b></td><td style='width: 64%;'><% _loc($windowType) %></td>
+    </tr><tr>
+        <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Tipo de pase:</b></td><td style='width: 64%;'><% _loc($type) %></td>
+    </tr><tr>
+        <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Entorno <% $type eq 'promote'?'destino':'origen' %>:</b></td><td style='width: 64%;'><% $bl %> </td>
+    </tr><tr>
+        <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Paquetes:</b></td><td style='width: 64%;'><li><% join '<li>', @{ $packageList } %></td>
     </tr>
 </table>
 
