Treegrid in root

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -97,6 +97,10 @@
     <link rel='stylesheet' type='text/css' href='/static/fullcalendar/fullcalendar.css' />
     <link rel='stylesheet' type='text/css' href='/static/fullcalendar/fullcalendar.print.css' media='print' />
     <script type='text/javascript' src='/static/fullcalendar/fullcalendar.min.js'></script>
+
+    <!-- Treegrid -->
+    <link rel='stylesheet' type='text/css' href='/static/treegrid/css/treegrid.css' />
+    <script type='text/javascript' src='/static/treegrid/treegrid.js'></script>
     
     <!-- final css override -->
     <link rel="stylesheet" type="text/css" href="/static/final.css" />
