--- a/root/email/approval.html
+++ b/root/email/approval.html
@@ -10,6 +10,7 @@
     $subject => ''
     $url_approve
     $url_reject
+    $url
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
