--- a/features/bde/root/email/analysis_informepase_ju.html
+++ b/features/bde/root/email/analysis_informepase_ju.html
@@ -1,6 +1,7 @@
 <%args>
   $mail_data
   $message
+  $url
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
@@ -13,6 +14,12 @@
 body {
 	font-family: arial;
 	font-size: 10pt;
+}
+.imgRight {
+    vertical-align: middle;
+    text-align: right;
+    padding: 0px;
+    margin: 0px;
 }
 .backGroundPrimeraFila {
 	font-family: Verdana;
@@ -32,13 +39,14 @@ body {
 </style>
 <body> 
 <div id="tablaContenedor_div">
-<TABLE cellpadding="0" cellspacing="0" width="100%">
-	<TR height="20">
-		<TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">
-			&nbsp;Baseliner SCM
-		</TD>
-	</TR>
-</TABLE>
+    <TABLE border=0 cellpadding="0" cellspacing="0" width="100%">
+        <TR style="height:54px">
+            <TD class="imgRight" ><img src="<% $url %>/static/images/filigrana.png" /></TD>
+        </TR>
+        <TR height="20">
+            <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
+        </TR>
+    </TABLE>
 </div>
 
 <table border=0 cellspacing=2>
