--- a/features/bde/root/email/ldif_load_error.html
+++ b/features/bde/root/email/ldif_load_error.html
@@ -1,6 +1,7 @@
 <%args>
   $error_str
   $message
+  $url
 </%args>
 
 <head>
@@ -9,15 +10,47 @@
     <title>Accion</title>
 </head>
 
-<body>
-<% $message %>
-<p>
-Fallo en la carga de usuarios: <% $error_str %>
-</body>
-
 <style>
 body {
 	font-family: arial;
 	font-size: 10pt;
 }
+.imgRight {
+    vertical-align: middle;
+    text-align: right;
+    padding: 0px;
+    margin: 0px;
+}
+.backGroundPrimeraFila {
+    font-family: Verdana;
+    font-size: 8pt;
+    font-weight: bold;
+    color: #CCCCCC;
+    background-color: #666666;
+    vertical-align: middle;
+}
 </style>
+
+
+<body>
+<div id="tablaContenedor_div">
+    <TABLE border=0 cellpadding="0" cellspacing="0" width="100%">
+        <TR style="height:54px">
+            <TD class="imgRight" ><img src="<% $url %>/static/images/filigrana.png" /></TD>
+        </TR>
+        <TR height="20">
+            <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
+        </TR>
+    </TABLE>
+</div>
+
+<table border=0 cellspacing=2>
+    <tr>
+        <td><br><h3><% $message %></h3><br></td>
+    </tr>
+    <tr>
+        <td><br><h3>Fallo en la carga de usuarios: <% $error_str %></h3><br></td>
+    </tr>
+</table>
+
+</body>
