--- a/features/bde/root/email/analysis_informepase_ju.html
+++ b/features/bde/root/email/analysis_informepase_ju.html
@@ -57,7 +57,7 @@ body {
 	</tr>
 </table>
 
-<table border=1 cellspacing=1 cellpadding="2">
+<table border=1 cellspacing=1 cellpadding="2" width=100%>
 	<tr>
         <td class="backGroundPrimeraFila">Código de Pase</td>
         <td class="backGroundPrimeraFila">CAM</td>
@@ -68,21 +68,21 @@ body {
         <td class="backGroundPrimeraFila">Usuario</td>
         <td class="backGroundPrimeraFila">Desde</td>
         <td class="backGroundPrimeraFila">Hasta</td>
-        <td class="backGroundPrimeraFila">Paquetes</td>
+        <td class="backGroundPrimeraFila">Paquetes / Motivos</td>
         <!-- <td class="backGroundPrimeraFila">Acciones</td> -->
 	</tr>
 % for my $row (@{$mail_data}) {
 	<tr class="backGroundFilaDatos">
-        <td class="backGroundFilaDatos"><A=href"http://prusv053:42998/raw/job/log/list?id_job=<% $row->{job_id} %>"><% $row->{job_name} %></A></td>
-        <td class="backGroundFilaDatos"><% join '<br>', @{$row->{cam_list}} %></td>
-        <td class="backGroundFilaDatos"><% $row->{status} %></td>
-        <td class="backGroundFilaDatos"><% $row->{environment} %></td>
-        <td class="backGroundFilaDatos"><% join '<br>', @{$row->{nature_list}} %></td>
-        <td class="backGroundFilaDatos"><% join '<br>', @{$row->{subapps_list}} %></td>
-        <td class="backGroundFilaDatos"><% $row->{username} %></td>
-        <td class="backGroundFilaDatos"><% $row->{start_time} %></td>
-        <td class="backGroundFilaDatos"><% $row->{end_time} %></td>
-        <td class="backGroundFilaDatos"><li><% join '<li>', @{$row->{package_list}} %></td>
+        <td nowrap class="backGroundFilaDatos"><A HREF="<% $url %>/raw/job/log/list?id_job=<% $row->{job_id} %>"><% $row->{job_name} %></A></td>
+        <td nowrap class="backGroundFilaDatos"><li><% join '<li>', @{$row->{cam_list}} %></td>
+        <td nowrap class="backGroundFilaDatos"><% $row->{status} %></td>
+        <td nowrap class="backGroundFilaDatos"><% $row->{environment} %></td>
+        <td nowrap class="backGroundFilaDatos"><li><% join '<li>', @{$row->{nature_list}} %></td>
+        <td nowrap class="backGroundFilaDatos"><% join '<br>', @{$row->{subapps_list}} %></td>
+        <td nowrap class="backGroundFilaDatos"><% $row->{username} %></td>
+        <td nowrap class="backGroundFilaDatos"><% $row->{start_time} %></td>
+        <td nowrap class="backGroundFilaDatos"><% $row->{end_time} %></td>
+        <td width=100% class="backGroundFilaDatos"><table><% @{$row->{package_list}} %></table></td>
         <!-- <td class="backGroundFilaDatos"><% 'acciones aqui' %></td> -->
 	</tr>
 % }
