--- a/features/changeman/root/email/linklist.html
+++ b/features/changeman/root/email/linklist.html
@@ -8,6 +8,7 @@
     $jobid
     $items => []
     $url_log
+    $url
     $to
 </%args>
 <head>
@@ -21,6 +22,12 @@ body {
     font-family: arial;
     font-size: 10pt;
     }
+.imgRight {
+    vertical-align: middle;
+    text-align: right;
+    padding: 0px;
+    margin: 0px;
+}
 .backGroundPrimeraFila {
     font-family: Verdana;
     font-size: 8pt;
@@ -38,13 +45,16 @@ body {
     }
 </style>
 <body>
-    <div id="tablaContenedor_div">
-        <TABLE cellpadding="0" cellspacing="0" width="100%">
-            <TR height="20">
-                <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/CHANGEMAN</TD>
-            </TR>
-        </TABLE>
-    </div>
+<div id="tablaContenedor_div">
+    <TABLE border=0 cellpadding="0" cellspacing="0" width="100%">
+        <TR style="height:54px">
+            <TD class="imgRight" ><img src="<% $url %>/static/images/filigrana.png" /></TD>
+        </TR>
+        <TR height="20">
+            <TD class="backGroundPrimeraFila" nowrap="nowrap" height="14">&nbsp;SCM/Baseliner</TD>
+        </TR>
+    </TABLE>
+</div>
 
     <table border=0 cellspacing=2>
         <tr>
