cambios en visualizacion de topicos

--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -77,29 +77,26 @@ padding: 2px 4px 2px 7px;
 </style>
 <div id="boot" class="container_24" style="margin: 10px 10px 10px 10px">
     <div class="grid_24">
-% foreach my $field ( sort { $a->{field_order} <=> $b->{field_order} } grep { $_->{section} eq 'head' } _array( $topic_meta ) ) {
+        <div class="grid_12">
+            <table>
+                <tbody>
+% foreach my $field ( sort { $a->{field_order_html} <=> $b->{field_order_html} } grep { $_->{section} eq 'head' } _array( $topic_meta ) ) {
 % if ($field->{html}){
     <& $field->{html}, data=>$topic_data, meta=>$field &>
 %}
 % }
-        <table class="table table-bordered table-condensed">
-            <tbody>
-% foreach my $field ( sort { $a->{field_order} <=> $b->{field_order} } grep { $_->{section} eq 'body' } _array( $topic_meta ) ) {
-% if ($field->{html}){
-    <& $field->{html}, data=>$topic_data, meta=>$field &>
-%}    
-% }
-                <tr>
-                    <td colspan="2">
-% foreach my $field ( sort { $a->{field_order} <=> $b->{field_order} } grep { $_->{section} eq 'details' } _array( $topic_meta ) ) {
-% if ($field->{html}){
-    <& $field->{html}, data=>$topic_data, meta=>$field &>
-%}
-% }
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
+        <div class="grid_12">
+            <table>
+                <tbody>
+                    <tr>
+                        <td> BODY </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
             
 
