--- a/root/fields/system/html/field_title.html
+++ b/root/fields/system/html/field_title.html
@@ -4,10 +4,10 @@
 </%args>
 
     <tr>
-        <th width="1" style="vertical-align: middle">
+        <td width = "1" style="vertical-align: middle">
             <span class="label" style="background: <% $data->{color_category} %>"><% $data->{name_category} %> #<% $data->{topic_mid} %></span>
-        </th>
-        <th>
+        </td>
+        <td style = "padding-left:10px">
             <h3><% eval('$data->{' . $meta->{bd_field} . '}') %></h3>
-        </th>
+        </td>
     </tr>    
