--- a/root/fields/system/html/field_include_into.html
+++ b/root/fields/system/html/field_include_into.html
@@ -6,7 +6,7 @@
 <%perl>
     
     my @parents_topics = $c->model('Baseliner::BaliTopic')->search(
-                            { rel_type=>'topic_topic', to_mid=>$data->{topic_mid} },
+                            { rel_type=>'topic_topic', 'categories.is_release' => {'!=',1}, to_mid=>$data->{topic_mid} },
                             { join=>['categories','children','master'], select=>['mid','title', 'progress', 'categories.name', 'categories.color'], as=>['mid','title','progress','name','color'] }
                             )->hashref->all;
     @parents_topics = $c->model('Topic')->append_category( @parents_topics );
