cambio de la visualizacion de topicos

--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -97,12 +97,9 @@ padding: 2px 4px 2px 7px;
     <& $field->{html}, data=>$topic_data, meta=>$field &>
 %}    
 % }
-                </tbody>
-            </table>
-            <table>
-                <tbody>
+
                     <tr>
-                        <td>
+                        <td colspan=2>
 % foreach my $field ( sort { $a->{field_order} <=> $b->{field_order} } grep { $_->{section} eq 'details' } _array( $topic_meta ) ) {
 % if ($field->{html}){
     <& $field->{html}, data=>$topic_data, meta=>$field &>
