--- a/root/site/header.html
+++ b/root/site/header.html
@@ -50,6 +50,9 @@
     <script type="text/javascript" src="/static/codemirror/lib/util/simple-hint.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/perl/perl.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/javascript/javascript.js"></script>
+    <script type="text/javascript" src="/static/codemirror/mode/xml/xml.js"></script>
+    <script type="text/javascript" src="/static/codemirror/mode/plsql/plsql.js"></script>
+    <script type="text/javascript" src="/static/codemirror/mode/markdown/markdown.js"></script>
     <style type="text/css">
         .CodeMirror { border: 1px solid #eee;} 
         .CodeMirror-scroll {
