the jit activated

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -31,7 +31,7 @@
     <script src="/static/flot/flot.js"></script>
 
     <!-- The JIT -->
-    <!-- <script src="/static/jit/jit.js"></script> -->
+    <script src="/static/jit/jit.js"></script>
 
     <!-- JSGantt -->
     <!--
