Reports, mails y quitar opciones - SCM.N-002083 BAS GDF #72705, #72694, #72705 y #72685

--- a/features/bde/root/email/analysis_informepase_ju.html
+++ b/features/bde/root/email/analysis_informepase_ju.html
@@ -1,6 +1,7 @@
 <%args>
   $mail_data
   $message
+  $to
   $url
 </%args>
 <head>
@@ -89,4 +90,9 @@ body {
 	</tr>
 % }
 </table>
+    <p>
+% if ( $ENV{BASELINER_DEBUG} ) {
+Enviado a: <% join ",",@$to %>
+%}
+    </p>
 </body>
