--- a/root/email/approval.html
+++ b/root/email/approval.html
@@ -8,6 +8,7 @@
     $requested_by
     $requested_to => []
     $subject => ''
+    $to
     $url_approve
     $url_reject
     $url
@@ -113,6 +114,11 @@ body {
         </td>
     </tr>
 </table>
+    <p>
+% if ( $ENV{BASELINER_DEBUG} ) {
+Enviado a: <% join ",",@$to %>
+%}
+    </p>
 </body>
 
 
