--- a/root/email/approval_manual.html
+++ b/root/email/approval_manual.html
@@ -6,6 +6,7 @@
 	$requested_by
 	$requested_to => []
 	$subject 
+    $to
 	$url_approve
 	$url_log
 	$url
@@ -129,4 +130,9 @@ body {
         </td>
     </tr>
 </table>
+    <p>
+% if ( $ENV{BASELINER_DEBUG} ) {
+Enviado a: <% join ",",@$to %>
+%}
+    </p>
 </body>
