--- a/features/bde/root/email/scheduled.html
+++ b/features/bde/root/email/scheduled.html
@@ -15,7 +15,7 @@
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8898-1" />
+    <meta http-equiv="Content-Type" content="text/html; charset=charset=iso-8898-15" />
     <title>Accion</title>
 	<& /email/style.css &>
 </head>
