--- a/root/site/header.html
+++ b/root/site/header.html
@@ -1,4 +1,4 @@
-<!-- DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" -->
+<!DOCTYPE html>
 <%perl>
     my $lang = $c->language;
 </%perl>
@@ -41,6 +41,9 @@
     <script type="text/javascript" src="/static/codemirror/lib/util/simple-hint.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/perl/perl.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/javascript/javascript.js"></script>
+    <script type="text/javascript" src="/static/codemirror/mode/xml/xml.js"></script>
+    <script type="text/javascript" src="/static/codemirror/mode/plsql/plsql.js"></script>
+    <script type="text/javascript" src="/static/codemirror/mode/markdown/markdown.js"></script>
     <style type="text/css">
         .CodeMirror { border: 1px solid #eee;} 
         .CodeMirror-scroll {
