--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -8,6 +8,7 @@
     $jobs => 0
 </%args>
 <%perl>
+    use Baseliner::Utils;
     my @tabactive = _array( $comments ) ? ( 1,0 ) : ( 0,1);
 </%perl>
 <style>
@@ -188,7 +189,7 @@ padding: 2px 4px 2px 7px;
             </div> <!-- activity tab -->
 
             <div class="tab-pane <% $tabactive[2] and 'active' %>" id="jobs<% $ii %>">
-%  foreach my $job ( _array $jobs ) {
+%  foreach my $job ( _array( $jobs ) ) {
                 <div style="margin-left: 20px">
                     <p><a href="javascript:Baseliner.addNewTab('/job/log/dashboard?id_job=<% $job->{id} %>&name=<% $job->{name} %>','<% $job->{name} %>')"><% $job->{name} %></a> - <% _loc( $job->{status} ) %>  <small><% $job->{ts} %></small></p>
                     <hr />
