--- a/root/site/header.html
+++ b/root/site/header.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="/static/codemirror/theme/lesser-dark.css">
     <link rel="stylesheet" href="/static/codemirror/lib/util/simple-hint.css">
     <script type="text/javascript" src="/static/codemirror/lib/codemirror.js"></script>
+    <script type="text/javascript" src="/static/codemirror/lib/util/formatting.js"></script>
     <script type="text/javascript" src="/static/codemirror/lib/util/simple-hint.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/perl/perl.js"></script>
     <script type="text/javascript" src="/static/codemirror/mode/javascript/javascript.js"></script>
