gridtree cambiado de sitio

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -106,6 +106,10 @@
     <link rel='stylesheet' type='text/css' href='/static/fullcalendar/fullcalendar.css' />
     <link rel='stylesheet' type='text/css' href='/static/fullcalendar/fullcalendar.print.css' media='print' />
     <script type='text/javascript' src='/static/fullcalendar/fullcalendar.min.js'></script>
+
+    <!-- TreeGrid -->
+    <link rel="stylesheet" type="text/css" href="/static/gridtree/css/treegrid.css" />
+    <script type="text/javascript" src="/static/gridtree/treegrid.js"></script>
     
     <!-- final css override -->
     <link rel="stylesheet" type="text/css" href="/static/final.css" />
