se elimian un caracter erroneo - fernando

--- a/features/bde/root/bde-header/header.html
+++ b/features/bde/root/bde-header/header.html
@@ -35,7 +35,7 @@
   </ul>
 </li>
 <li>
-    <a href="<% 'http://scm-sqa.bde.es' %>">SCM-SQA</a>
+    <a href="<% $c->config->{bde_scm_web} %>/tab/sqa/grid">SCM-SQA</a>
 </li>
 <li>
     <a href="<% $c->config->{bde_scm_web} %>/scm_inf/inf/infReport.jsp">Informes</a>
