prueba con sprites

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -112,6 +112,7 @@
     
     <!-- final css override -->
     <link rel="stylesheet" type="text/css" href="/static/final.css" />
+    <link rel="stylesheet" type="text/css" href="/static/sprites.css" />
 
     <!-- Hooks -->
 % for my $include ( _array $c->stash->{header_include} ) {
