lifecycle is now explorer, use Baseliner.explorer to get the current explorer file.

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -75,7 +75,7 @@
         }
     </style>
 
-    <script type="text/javascript" src="/site/lifecycle.js"></script>
+    <script type="text/javascript" src="/site/explorer.js"></script>
 
     <!-- Portal Stuff -->
     <script type="text/javascript" src="/site/portal/Portal.js"></script>
