--- a/root/site/header.html
+++ b/root/site/header.html
@@ -38,6 +38,10 @@
     <link rel="stylesheet" type="text/css" href="/static/jsgantt.css" />
     <script language="javascript" src="/static/jsgantt.js"></script>
     -->
+
+    <!-- CLEditor -->
+    <link rel="stylesheet" href="/static/cleditor/jquery.cleditor.css">
+    <script type="text/javascript" src="/static/cleditor/jquery.cleditor.min.js"></script>
     
     <!-- CodeMirror -->
     <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
