Reinicio de pases CHM

--- a/features/bde/root/email/analysis_informepase_ju.html
+++ b/features/bde/root/email/analysis_informepase_ju.html
@@ -73,12 +73,12 @@ body {
 
 <table border=1 cellspacing=1 cellpadding="2" width=100%>
 	<tr>
-        <td class="backGroundPrimeraFila">Código de Pase</td>
+        <td class="backGroundPrimeraFila">C&oacute;digo de Pase</td>
         <td class="backGroundPrimeraFila">CAM</td>
         <td class="backGroundPrimeraFila">Estado</td>
         <td class="backGroundPrimeraFila">Entorno</td>
-        <td class="backGroundPrimeraFila">Nodo</td>
-        <td class="backGroundPrimeraFila">Tipología</td>
+        <td nowrap class="backGroundPrimeraFila">Nodo (Nº Reinicios)</td>
+        <td class="backGroundPrimeraFila">Tipolog&iacute;a</td>
         <td class="backGroundPrimeraFila">Urgencia</td>
         <td class="backGroundPrimeraFila">Usuario</td>
         <td class="backGroundPrimeraFila">Desde</td>
