--- a/features/bde/root/email/scheduled.html
+++ b/features/bde/root/email/scheduled.html
@@ -77,6 +77,8 @@ body {
 <table border=0 cellspacing=4 cellpadding=2 width=80%>
     <td colspan=2><hr></td>
     <tr>
+        <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Pase:</b></td><td style='width: 64%;'><% $job %></td>
+    </tr><tr>
         <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Usuario propietario del pase:</b></td><td style='width: 64%;'><% $username %> (<% $realname %>)</td>
     </tr><tr>
         <td class="backGroundFilaDatos" style="white-space: nowrap; width: 16%;"><b>Tipo de ventana:</b></td><td style='width: 64%;'><% _loc($windowType) %></td>
